--- a/assets/css/svg-style.css
+++ b/assets/css/svg-style.css
@@ -127,11 +127,15 @@ ul.breadcrumb span{color:var(--bodyTxt-color);font-size: var(--body);}
 .servClientRew{background-color:#f8f8f8;padding:2em;border-radius:15px;}
 .servClientRew > *:not(:last-child){margin-bottom:0.3em;}
 /* Tab Section */
-.sv-secGap.tab-content{padding-top:calc(var(--secGap) / 2);}
-.tab-content{display: none;}
-.tab-content.active{display: block;}
-ul.tabs{display:flex;align-items:flex-start;justify-content:flex-start;gap:1em;flex-flow: row wrap;}
-li.tabBtn{border: 1px solid var(--primary-color);background: #fff; padding:0.5em 1em;border-radius:6px;color:var(--primary-color);font-size: 20px;cursor: pointer;}
+.detailsTab > *{display: flex;align-items: flex-start;justify-content: flex-start;flex-flow: row wrap;gap: 1em;}
+.tabsSec{width:calc(25% - 1em);position:sticky;top:0px;z-index:4;}
+.detailsContent{width:calc(75% - 1em);}
+.tab-content{display:none;}
+.tab-content.active{display:block;}
+.tabsSec > *{background:#f8f8f8;padding:1em !important;border-radius:10px;}
+.tabsSec .blogCategoTitle{margin-bottom:1em;}
+ul.tabs > li:not(:last-child){margin-bottom:0.8em;}
+li.tabBtn{border:1px solid var(--primary-color);background:#fff;padding:0.5em 1em;border-radius:6px;color:var(--primary-color);font-size:20px;cursor:pointer;}
 li.tabBtn.active{background:var(--primary-color);color:#fff;}
 
 
